Update config with settings for site and analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+title: Callum Fraser
+description: Basic information and CV for Callum Fraser
+show_downloads: false
+google_analytics: G-0XNZ87F10D
