--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-cayman
 title: Callum Fraser
-description: Basic information and CV for Callum Fraser
+description: Leader, Mentor, Advocate
 show_downloads: false
 google_analytics: G-0XNZ87F10D
+github:
+  repository_url: https://www.callumfraser.com
